# moltis

crates/agents/src/: model.rs  tool_registry.rs
crates/auth/src/: credential_store.rs
crates/browser/src/: container.rs
crates/channels/src/: otp.rs  registry.rs
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  db_commands.rs  memory_commands.rs
crates/config/src/: agent_defs.rs  lib.rs  loader.rs  schema.rs  template.rs  validate.rs
crates/discord/src/: config.rs  handler.rs  plugin.rs
crates/gateway/src/: agent_persona.rs  channel_events.rs  channel_webhook_dedup.rs  lib.rs  mcp_service.rs  network_audit.rs  node_exec.rs  onboarding.rs  runtime_db.rs  server.rs  state.rs
crates/graphql/tests/: integration.rs
crates/mcp/src/: manager.rs  registry.rs  sse_transport.rs
crates/memory/: Cargo.toml
crates/memory/src/: config.rs  lib.rs  manager.rs
crates/metrics/src/: store.rs
crates/msteams/src/: plugin.rs
crates/provider-setup/: Cargo.toml
crates/provider-setup/src/: lib.rs
crates/providers/src/: github_copilot.rs  lib.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/service-traits/src/: lib.rs
crates/slack/src/: config.rs  socket.rs  webhook.rs
crates/swift-bridge/: Cargo.toml
crates/swift-bridge/src/: lib.rs
crates/telegram/src/: config.rs  outbound.rs
crates/tools/src/: cron_tool.rs  sandbox.rs  spawn_agent.rs  wasm_component.rs  wasm_tool_runner.rs  web_search.rs
crates/web/src/: api.rs  lib.rs
crates/whatsapp/src/: connection.rs  sled_store.rs
docs/src/: configuration.md
(+18 files in other folders)
